# rpg-explore

./: .gitignore  Cargo.toml  README.md  rpg-explore.html
assets/maps/: larger_map.json  map.json  small_room.json
scripts/: build_wasm.sh  deploy_wasm.sh
src/: actions.rs  components.rs  constants.rs  events.rs  game_states.rs  main.rs  map.rs  text.rs  ui.rs  util.rs
src/systems/: action_system.rs  character_moving_system.rs  input_system.rs  mod.rs  plan_stroll_system.rs  player_moving_system.rs  rendering_system.rs  ui_system.rs
