[package]
name = "rpg-explore"
version = "0.1.0"
authors = ["Rob Williams <rwilliams@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad", branch = "0.3" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad", branch = "0.3" }
miniquad = "0.3.0-alpha.13"
quad-rand = "0.1.1"
specs = { version = "0.16.1", features = ["specs-derive"], default-features = false }

[profile.dev.package.'*']
opt-level = 3