[package]
name = "rpg-explore"
version = "0.1.0"
authors = ["Rob Williams <robwilliams42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Macroquad and related dependencies
macroquad = { git = "https://github.com/not-fl3/macroquad", rev = "5bcdbf8" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad", rev = "5bcdbf8" }
megaui-macroquad = { git = "https://github.com/not-fl3/megaui-macroquad" }
quad-rand = "0.1.1"
# default-features = false to avoid parallel multi-threading (which breaks WASM)
specs = { version = "0.16.1", features = ["specs-derive"], default-features = false }

[profile.dev.package.'*']
opt-level = 3